Remove lista de envio para se adequar as especificações do projeto

--- a/AssetsMonitor/AssetsMonitor/email.config.json
+++ b/AssetsMonitor/AssetsMonitor/email.config.json
@@ -4,7 +4,5 @@
   "Username": "arthurvieirasilva@gmail.com",
   "Password": "******",
   "FromEmail": "arthurvieirasilva@gmail.com",
-  "ToEmailList": [
-    "arthurvieirasilva@gmail.com"
-  ]
+  "ToEmail": "arthurvieirasilva@gmail.com"
 }
